Fix Salt version to 3004.2; still not working via pyGnmi

--- a/lab/salt_data_srv/salt/templates/set_hostname2.j2
+++ b/lab/salt_data_srv/salt/templates/set_hostname2.j2
@@ -3,7 +3,11 @@
 /opt/srlinux/bin/sr_cli -ec --commit-at-end << 'EOF'
 system {
  name {
-  host-name "{{ grains[ 'host' ] }}"
+# grains[ 'host' ]
+# {{ pillar.get('hostname','x') }}
+# show_full_context()|yaml(False)
+  host-name "{{ __pub_arg[1]['args']['hostname'] }}"
  }
 }
+
 EOF
